--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "overlay",
+	"description": "Really stupidly simple overlay for browser.",
 	"version": "1.2.1",
 	"author": {
 		"name": "David Kudera",
