--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "overlay",
-	"description": "Really stupidly simple overlay for browser.",
-	"version": "1.2.4",
+	"description": "[ABANDONED] Really stupidly simple overlay for browser.",
+	"version": "1.2.5",
 	"author": {
 		"name": "David Kudera",
-		"email": "sakren@gmail.com"
+		"email": "kudera.d@gmail.com"
 	},
 	"keywords": [
 		"browser",
@@ -13,7 +13,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:sakren/node-overlay.git"
+		"url": "git@github.com:Carrooi/Node-Overlay.git"
 	},
 	"main": "./lib/Overlay.js",
 	"license": "MIT",
@@ -28,3 +28,4 @@
 		"test": "cd ./tests; mocha-phantomjs index.html;"
 	}
 }
+
